--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,13 @@
 	<body>
 		<header>
 			<div id="header-wrap">
-			<h1><%= link_to "colcho.net", root_path %> </h1>
-				<nav>
-					<ul>
-						<li><%= link_to t('layout.rooms'), rooms_path %> </li>
-						<li><%= link_to t('layout.signup'), new_user_path %> </li>
-					</ul>
-				</nav>
+				<h1><%= link_to "colcho.net", root_path %> </h1>
+					<% if user_signed_in?%>
+						<%= render 'layouts/user_navbar' %>
+					<%end%>
+					<% else %>
+						<%= render 'layouts/visitor_navbar' %>
+					<% end %>
 			</div>
 		</header>
 
