--- a/app/assets/stylesheets/default.css.scss
+++ b/app/assets/stylesheets/default.css.scss
@@ -1,10 +1,12 @@
+@import "shadow";
+
 $header-height: 55px;
 $content-width: 700px;
 
 $serif-families: "Pacifico", "Georgia", serif;
 $sans-serif-families: "Helvetica", sans-serif;
 
-$error-text-color: #B94A48;	
+$error-text-color: #B94A48;
 $success-text-color: #468847;
 
 *{
@@ -12,14 +14,6 @@ $success-text-color: #468847;
 	font-size: 14px
 }
 body { background-color: #f5f5f5}
-
-@mixin shadow($color, $x, $y, $radius){
-	
-	-moz-box-shadow: $color, $x, $y, $radius;
-	-webkit-box-shadow: $color, $x, $y, $radius;
-	box-shadow: $color, $x, $y, $radius;
-
-}
 
 header {
 	@include shadow(#ccc, 0, 3px, 6px);
@@ -29,7 +23,7 @@ header {
 		width: $content-width;
 		margin: 0 auto;
 	}
-	
+
 	height: $header-height;
 	background-color: #9ECE71;
 	h1 {
