correção de form

--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,7 +1,7 @@
 <article class="room">
-  <h2><%= link_to room.title, room %> </h2>
+  <h2> <%= link_to room.title, room %> </h2>
 
-  <%= render :partial => 'review', :object => @user_review %>
+  <%= render :partial => 'review', local: {:room => room} %>
 
   <span class="created">
     <%= t '.owner_html',:owner => room.user.full_name,:when => l(room.created_at, :format => :short) %>
@@ -13,9 +13,12 @@
   </p>
   <p><%= room.description %> </p>
   <% if belongs_to_user(room) %>
-    <ul>
-      <li><%= link_to t('.edit'), edit_room_path(room) %> </li>
-      <li><%= link_to t('.destroy'), room_path(room),:method => :delete,:data => {:confirm => t('dialogs.destroy')}%> </li>
-    </ul>
+  <ul>
+    <li><%= link_to t('.edit'), edit_room_path(room.route) %> </li>
+    <li><%= link_to t('.destroy'), room_path(room.route),
+      :method => :delete,
+      :data => {:confirm => t('dialogs.destroy')} %>
+    </li>
+  </ul>
   <% end %>
 </article>
