--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,24 +1,13 @@
 <article class="room">
-  <h2> <%= link_to room.title, room %> </h2>
+  <h2><%= link_to room.title, room.route %> </h2>
+  <%= render :partial => 'review', :locals => {:room => room} %>
 
-  <%= render :partial => 'review', local: {:room => room} %>
+    <span class="created">
 
-  <span class="created">
-    <%= t '.owner_html',:owner => room.user.full_name,:when => l(room.created_at, :format => :short) %>
-  </span>
-  <p>
-    <span class="location">
-      <%= link_to room.location,"https://maps.google.com/?q=#{room.location}",:target => :blank %>
-    </span>
-  </p>
-  <p><%= room.description %> </p>
-  <% if belongs_to_user(room) %>
-  <ul>
-    <li><%= link_to t('.edit'), edit_room_path(room.route) %> </li>
-    <li><%= link_to t('.destroy'), room_path(room.route),
-      :method => :delete,
-      :data => {:confirm => t('dialogs.destroy')} %>
-    </li>
-  </ul>
+    <% if belongs_to_user(room) %>
+    <ul>
+      <li><%= link_to t('.edit'), edit_room_path(room.route) %> </li>
+      <li><%= link_to t('.destroy'), room_path(room.route), :method => :delete, :data => {:confirm => t('dialogs.destroy')} %></li>
+    </ul>
   <% end %>
 </article>
