paginate-fault solved

--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,17 +1,26 @@
 <article class="room">
-  <table class='tablefull'>
-    <tbody>
-      <th> <h2><%= link_to room.title, room.route %> </h2> </th>
-      <th class='direita'> <%= render :partial => 'review', :locals => {:room => room} %> </th>
-    </tbody>
-  </table>
+  <h2>
+    <%= link_to highlight(room.title, @search_query), room.route %>
+  </h2>
 
-  <span class="created">
+  <%= render partial: 'review', locals: {room: room} %>
+
+  <div class="room-description">
+    <%= link_to(
+          image_tag(room.thumb_url),
+          room.picture_url
+        ) if room.has_picture? %>
+
+    <p><%= highlight(room.description || '', @search_query) %></p>
+  </div>
 
   <% if belongs_to_user(room) %>
     <ul>
-      <li><%= link_to t('.edit'), edit_room_path(room.route) %> </li>
-      <li><%= link_to t('.destroy'), room_path(room.route), :method => :delete, :data => {:confirm => t('dialogs.destroy')} %></li>
+      <li><%= link_to t('.edit'), edit_room_path(room.route) %></li>
+      <li><%= link_to t('.destroy'), room_path(room.route),
+        method: :delete,
+        data: {confirm: t('dialogs.destroy')} %>
+      </li>
     </ul>
   <% end %>
 </article>
