--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,3 +1,12 @@
-<h1><%= t '.title' %> </h1>
-<%=render @rooms %>
-<footer style="padding: 20px;"></footer>
+<%= render 'search' %>
+<h1>
+  <% if @search_query.present? %>
+    <%= t '.search_results' %>
+  <% else %>
+    <%= t '.title' %>
+  <% end %>
+</h1>
+<%= render @rooms %>
+
+<%#= aa %>
+<%= paginate @rooms %>
