--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,29 +1,34 @@
-<%= form_with(model: room, local: true) do |form| %>
-  <% if room.errors.any? %>
+<%= form_for(@room) do |f| %>
+  <% if @room.errors.any? %>
     <div id="error_explanation">
-      Há errors no formulario, por favor verifique.
+      <h2><%= pluralize(@room.errors.count, "error") %> prohibited this room from being saved:</h2>
+
+      <ul>
+      <% @room.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
     </div>
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :room_title %>
-    <%= error_tag @room, :title%>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
   </div>
-
   <div class="field">
-    <%= form.label :location %>
-    <%= form.text_field :location, id: :room_location %>
-    <%= error_tag @room, :location%>
+    <%= f.label :location %><br>
+    <%= f.text_field :location %>
   </div>
-
   <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :room_description %>
-    <%= error_tag @room, :description%>
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
   </div>
-
+  <div>
+    <%= f.label :picture %>
+    <%= f.file_field :picture %>
+    <%= error_tag @room, :picture %>
+  </div>
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit %>
   </div>
 <% end %>
