--- a/app/views/rooms/_review.html.erb
+++ b/app/views/rooms/_review.html.erb
@@ -1,7 +1,15 @@
 <section class="review">
   <% if room.show_form? %>
-    <%= render :partial => 'review_form', :locals => {:room => room} %>
+    <%= render partial: 'review_form', locals: {room: room} %>
   <% else %>
-    <%= t '.stats', :average => room.stars, :max => room.review_points.max, :count => room.total_reviews %>
+    <% room.stars.times do %>
+      <%#= fa_icon 'star' %>
+    <% end %>
+
+    <% (room.review_points.max - room.stars).times do %>
+      <%#= fa_icon 'star-o' %>
+    <% end %>
+
+    <%= t '.stats', count: room.total_reviews %>
   <% end %>
 </section>
