--- a/app/views/rooms/_review_form.html.erb
+++ b/app/views/rooms/_review_form.html.erb
@@ -1,13 +1,16 @@
 <% if room.can_review? %>
-  <%= form_for room.review_route, :remote => true do |f| %>
+  <%= form_for room.review_route, remote: true do |f| %>
     <% room.review_points.each do |point| %>
-      <%= f.radio_button :points, point %>
-      <%= f.label :points, point, :value => point %>
+      <%= f.radio_button :points, point  %>
+      <%= f.label :points, value: point do %>
+        <%= fa_icon 'star' %>
+      <% end %>
     <% end %>
-  <%= f.submit %>
+
+    <%= f.submit %>
   <% end %>
 <% else %>
   <span class="login_required">
-  <%= t('.login_to_review') %>
+    <%= t('.login_to_review') %>
   </span>
 <% end %>
